[gd_scene load_steps=9 format=3 uid="uid://bqqgyqafm7xwp"]

[ext_resource type="Environment" path="res://scenes/main-environment.tres" id="1_w08uy"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_ywwvd"]
[ext_resource type="PackedScene" path="res://objects/player.tscn" id="2_j6to5"]
[ext_resource type="Script" path="res://scripts/view.gd" id="3_rhk2t"]
[ext_resource type="PackedScene" path="res://objects/platform.tscn" id="4_r1fb6"]
[ext_resource type="PackedScene" path="res://objects/coin.tscn" id="5_bgi0b"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="6_7j1rt"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_csnxw"]
plane = Plane(0, 1, 0, -10)

[node name="Main" type="Node3D"]
script = ExtResource("1_ywwvd")

[node name="Environment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_w08uy")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 6, 0)
shadow_enabled = true

[node name="Player" parent="." node_paths=PackedStringArray("view") groups=["player"] instance=ExtResource("2_j6to5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
view = NodePath("../View")

[node name="View" type="Node3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("3_rhk2t")
target = NodePath("../Player")

[node name="Camera" type="Camera3D" parent="View"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 45.0

[node name="World" type="Node3D" parent="."]

[node name="PlatformStart" parent="World" instance=ExtResource("4_r1fb6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="PlatformUpper" parent="World" instance=ExtResource("4_r1fb6")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 6, 2, -2)

[node name="PlatformLeft" parent="World" instance=ExtResource("4_r1fb6")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -6, 3, -3)

[node name="PlatformHigh" parent="World" instance=ExtResource("4_r1fb6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -6)

[node name="PlatformRight" parent="World" instance=ExtResource("4_r1fb6")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 4, 4, 3)

[node name="Boundary" type="StaticBody3D" parent="World"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Boundary"]
shape = SubResource("WorldBoundaryShape3D_csnxw")

[node name="CoinStart" parent="World" instance=ExtResource("5_bgi0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CoinUpper" parent="World" instance=ExtResource("5_bgi0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 3, -2)

[node name="CoinLeft" parent="World" instance=ExtResource("5_bgi0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 4, -3)

[node name="CoinHigh" parent="World" instance=ExtResource("5_bgi0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.5, -6)

[node name="CoinRight" parent="World" instance=ExtResource("5_bgi0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, 3)

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("6_7j1rt")

[node name="InfoPanel" type="ColorRect" parent="HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 120.0
color = Color(0, 0, 0, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/InfoPanel"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CoinsLabel" type="Label" parent="HUD/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 52.0
text = "Monedas: 0"

[node name="TimeLabel" type="Label" parent="HUD/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 56.0
offset_right = -12.0
offset_bottom = 96.0
text = "Tiempo: 0.00 s"

[connection signal="coin_collected" from="Player" to="HUD" method="_on_coin_collected"]
